--- a/theme/assets/css/new.css
+++ b/theme/assets/css/new.css
@@ -10,7 +10,8 @@
 }
 
 article {
-  padding: 1em 0 3em 0 !important;
+  padding: 1em 0 3em 0;
+  padding-bottom: 3em !important;
 }
 
 article .date {
