--- a/theme/assets/css/new.css
+++ b/theme/assets/css/new.css
@@ -84,6 +84,9 @@ article .img {
 
 article .img img {
   max-width: 100%;
+  max-height: 500px;
+  display: block;
+  margin: 0 auto;
 }
 
 article p, article li {
